--- a/src/App.css
+++ b/src/App.css
@@ -265,10 +265,10 @@ button[type="submit"]:hover {
   background-color: white;
   border: 1px solid #ddd;
   box-shadow: 0 2px 5px rgba(0,0,0,0.2);
-  z-index: 10; /* Должен быть выше остальных элементов */
-  max-height: 150px; /* Высота для скроллинга */
+  z-index: 10;
+  max-height: 150px;
   overflow-y: auto;
-  width: 100%; /* Чтобы список был такой же ширины, как поле ввода */
+  width: 100%;
 }
 
 .station-options li {
@@ -281,5 +281,142 @@ button[type="submit"]:hover {
 }
 
 .form-group {
-  position: relative; /* Нужно для того, чтобы выпадающий список был относителен к этому блоку */
+  position: relative;
 }
+
+.route-page {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
+  justify-content: center;
+  background-color: #f0f4f8;
+  padding: 20px;
+}
+
+.route-container {
+  overflow-x: auto;
+  white-space: nowrap;
+  padding: 20px;
+}
+
+.route-list {
+  display: flex;
+  flex-wrap: nowrap;
+  gap: 10px;
+}
+
+.route-item {
+  background-color: white;
+  border: 1px solid #ddd;
+  border-radius: 5px;
+  padding: 15px;
+  min-width: 300px; /* Минимальная ширина элемента маршрута */
+  max-width: 100%; /* Максимальная ширина элемента маршрута */
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  text-align: left;
+  display: inline-block;
+  box-sizing: border-box;
+  overflow: hidden;
+}
+
+.route-details {
+  display: flex;
+  flex-direction: column;
+}
+
+.route-details p {
+  margin: 5px 0;
+}
+
+.route-time {
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.route-time div {
+  margin-bottom: 10px;
+}
+
+.buy-ticket-button {
+  padding: 10px 20px;
+  background-color: #007bff;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1rem;
+  transition: background-color 0.3s ease;
+  margin-top: 10px; /* Отступ сверху для кнопки */
+}
+
+.buy-ticket-button:hover {
+  background-color: #0056b3;
+}
+
+.modal {
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 80%;
+  height: 60%;
+  background-color: white;
+  border-radius: 10px;
+  padding: 20px;
+  z-index: 1000;
+  display: flex;
+  flex-direction: column;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 999;
+}
+
+.modal-close-button {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  background-color: #f44336;
+  color: white;
+  border: none;
+  padding: 5px 10px;
+  cursor: pointer;
+}
+
+.available-seats-container {
+  display: flex;
+  flex-direction: row;
+  overflow-x: auto;
+  padding: 20px 0;
+}
+
+.available-seats-list {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 10px;
+}
+
+.seat-item {
+  width: 100px;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border: 2px solid #333;
+  border-radius: 5px;
+  cursor: pointer;
+  background-color: #f0f0f0;
+}
+
+.seat-item:hover {
+  background-color: #ccc;
+}
+
+
